Wed Jan 21 10:17:34 1998  Ezra Peisach  <epeisach@mit.edu>

	* btree/bt_open.c: Added O_BINARY for __CYGWIN32__.
	* clib/mkstemp.c: Added O_BINARY for __CYGWIN32__.
	* db/db.c: Added O_BINARY for __CYGWIN32__.
	* hash/dbm.c: Added O_BINARY for __CYGWIN32__.
	* hash/hash.c: Added O_BINARY for __CYGWIN32__.
	* hash/hsearch.c: Added O_BINARY for __CYGWIN32__.
	* include/db-int.h: Added O_BINARY for __CYGWIN32__.
	* recno/rec_open.c: Added O_BINARY for __CYGWIN32__.
	* test/dbtest.c: Added O_BINARY for __CYGWIN32__.
	* test/SEQ_TEST/t.c: Added O_BINARY for __CYGWIN32__.
	* test/btree.tests/main.c: Added O_BINARY for __CYGWIN32__.
	* test/hash1.tests/driver2.c: Added O_BINARY for __CYGWIN32__.
	* test/hash1.tests/tcreat3.c: Added O_BINARY for __CYGWIN32__.
	* test/hash1.tests/tdel.c: Added O_BINARY for __CYGWIN32__.
	* test/hash1.tests/thash4.c: Added O_BINARY for __CYGWIN32__.
	* test/hash1.tests/tread2.c: Added O_BINARY for __CYGWIN32__.
	* test/hash1.tests/tseq.c: Added O_BINARY for __CYGWIN32__.
	* test/hash1.tests/tverify.c: Added O_BINARY for __CYGWIN32__.
	* test/hash2.tests/bigtest.c: Added O_BINARY for __CYGWIN32__.
	* test/hash2.tests/passtest.c: Added O_BINARY for __CYGWIN32__.
	Changes originally by Jeremy Allison (jra@cygnus.com)

Thu Jan 15 11:34:13 1998  Ezra Peisach  <epeisach@mit.edu>

	* hash/hash_bigkey.c (collect_key, collect_data): Cast malloc
	return value to correct types. (raeburn@cygnus.com)

	* obj/Makefile.in (check): Set srcdir in environment.
	(raeburn@cygnus.com)

	* configure.in (AC_COMPILE_TYPE): replacment for AC_CHECK_TYPE
	that uses AC_TRY_COMPILE instead of AC_EGREP_CPP.  For now, only
	use it for the int32 types (where AC_CHECK_TYPE gets the wrong
	result on __CYGWIN32__) and plan that AC_CHECK_TYPE itself gets
	repaired. (Fix by eichin@cygnus.com)


Sun Dec 21 18:33:14 1997  Tom Yu  <tlyu@mit.edu>

	* hash/dbm.c: Rename the errno member of HTAB.

	* hash/hash.h: Rename the errno member of HTAB to local_errno to